/*
 * $Id: ChangeLog,v 1.1313 2003/08/01 02:58:10 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-08-01 13:41 UTC+2000 Giancarlo Niccolai <gian@niccolai.ws>
  * source/rtl/hblog.prg
    ! Fixed Missing some parameters from LOG() method declaration in
      class HB_Logger

  * include/thread.h
  * source/rdd/dbcmd.c
  * source/vm/thread.c
    ! threadsafed RDD system (except for sensible error messages
      on imporper operations under MT).

  * tests/mtstress.prg
    + Check for (minimal) coherency of database access under MT

2003-07-31 19:57 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbsetup.h
    + Added missing definitions when NON GNU compiler used. This fixes CurrDir() and CurrDrive() on Windows.

2003-07-31 20:42 UTC+0200 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/make_tgz.sh
  * xharbour/xharbour.spec
    + new option -fullstatic added to xhblnk and xhbmk.
      It allows to create full static binaries without and shared
      libs (even system ones) which can be installed on any system

  * xharbour/config/linux/gcc.cf
    * link with -lpthread only if vmmt libs is used - before all
      binaries (no MT too) where linked with pthread (see ldd)

  * xharbour/source/rtl/gtnul/Makefile
  * xharbour/source/rtl/gtnul/gtnul.c
    * force linking with HB_GT_LIB

2003-07-31 14:43 UTC+0200 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/source/debug/Makefile
  + xharbour/source/debug/dbgaltd.prg
  * xharbour/source/debug/debugger.prg
    * ALTD() code moved from debugger.prg to dbgaltd.prg
      Now if programmer adds ALTD(0) to he's code the whole libdebug
      is not linked - only one function.
    ! removed unnecessary call to HB_OSHASDRIVELETTER()

  * xharbour/source/debug/dbgtobj.prg
  * xharbour/source/debug/debugger.prg
    * #pragma -es0 commented
